Fixes to alignment, initial framework for quote

--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ margin: 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    flex-basis:80%;
+    flex-basis:70%;
     font-size: 24px;
     
 }
@@ -47,21 +47,23 @@ margin: 0;
     color: #F9FAF8;
 }
 
+/* HERO */
+
 .hero-box {
     background-color: #1F2937;
     border: 2px solid yellow;
     display: flex;
-    width: 100%;
     justify-content: center;
     align-items: center;
+    width: 100%;
 }
 
 .hero {
     display: flex;
-    flex-basis:80%;
+    flex-basis:70%;
     border: 2px solid pink;
-    padding-top: 60px;
-    padding-bottom: 60px;
+    padding-top: 120px;
+    padding-bottom: 120px;
     justify-content: center;
 }
 
@@ -88,13 +90,92 @@ margin: 0;
 .hero-left button {
     background-color: #3882F6;
     color: #F9FAF8;
-    padding: 16px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 25px;
+    padding-top:10px;
+    padding-bottom: 10px;
     font-weight: 700;
     border: none;
     border-radius: 10px;
     font-size: 25px;
 }
+
 .hero img {
-    flex-basis: 40%;
+    flex-grow:1;
+    flex-basis:100%;
+    height: 250px;
+
+}
+
+/* INFO */
+
+.info-box {
+    border: 2px solid yellow;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    padding-bottom: 25px;
+}
+
+.info-box h1 {
+    font-size: 36px;
+    font-weight: 900;
+    padding: 25px;
+}
+
+.info {
+    border: 2px solid orange;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-basis: 80%;
+    padding-top: 25px;
+    padding-bottom: 25px;
+    gap: 50px;
+}
+
+.customer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-size: 14px;
+}
+
+.customer img {
+    border: 4px solid #3882F6;
+    border-radius:18px;
+    align-self: flex-start;
+    height: 200px;
+    width: 200px;
+}
+
+.customer p {
+    width: 200px;
+    font-size:18px;
+}
+
+/* QUOTE */
+
+.quote-box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.quote {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#quote-signature {
+    align-self: flex-end;
 
 }
